[project]
name = "cyber-scout"
version = "0.2.0"
description = "Local CrewAI cybersecurity threat intelligence report generator."
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "crewai[tools]>=1.14.4,<2.0.0",
    "langchain-groq>=1.1.2,<2.0.0",
    "langchain-openai>=0.2.0,<0.4.0",
    "exa-py>=2.12.1,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "flask>=3.0.0,<4.0.0",
    "schedule>=1.2.0,<2.0.0",
    "markdown-pdf>=1.3.0,<2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
cyber-scout = "cyber_scout.cli:main"
cyber-scout-dashboard = "cyber_scout.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyber_scout"]
